# maoz-smart-search

./: .gitattributes  .gitignore  ASSIGNMENT.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
config/: concepts.json  gazetteer.json
data/: README.md  directory_inspired_synthetic_profiles.json  golden_queries.json  judged_queries.json  synthetic_profiles.json
data/artifacts/: bge_m3_profiles.npz  manifest.json
docs/: part-a1-discovery-questions.html  part-a2-architecture.html  part-a3-information-security.html  part-b-poc.html
maoz_search/: __init__.py  __main__.py  artifacts.py  concepts.py  domain.py  embeddings.py  index.py  lexical.py  normalization.py  projection.py  search.py  web.py
maoz_search/static/: app.css  app.js
maoz_search/templates/: index.html
scripts/: build_artifacts.py  evaluate.py  evaluate_judged.py
tests/: conftest.py  test_add_profile.py  test_api.py  test_concepts.py  test_directory_inspired_data.py  test_normalization.py  test_projection.py  test_search_integration.py  test_web_contract.py
